@@ -1,3 +1,12 @@
+2008-07-04  Carlos Garnacho  <carlos@imendio.com>
+
+	* src/tracker-indexer/modules/evolution.c
+	(get_account_name_from_imap_uri): Avoid potential invalid memory
+	reads.
+	(account_text_handler): Check that we're getting the right url tag
+	contents.
+	(get_imap_accounts): Avoid potential leaks.
+
 2008-07-04  Martyn Russell  <martyn@imendio.com>
 
 	* src/libtracker-common/tracker-log.c: (log_output): Use
